--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8,6 +8,10 @@
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
 
+::selection{ background-color: #DA4F49; color: white; }
+::moz-selection{ background-color: #DA4F49; color: white; }
+::webkit-selection{ background-color: #DA4F49; color: white; }
+
 article,
 aside,
 details,
@@ -16,7 +20,7 @@ figure,
 footer,
 header,
 hgroup,
-nav,
+nav,webkit-selection
 section {
   display: block;
 }
