--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -223,7 +223,7 @@ a:hover {
 
 .n-legend {
 	padding: 0;
-	margin-bottom: 5px;
+/*	margin-bottom: 5px;*/
 	font-size: 19.5px;
 	line-height: 36px;
 	color: #333;
