--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -145,6 +145,7 @@ body {
   background-color: #ffffff;
   padding-top: 60px;
   padding-bottom: 40px;
+  background: transparent url(/img/tile.jpg) repeat;
 }
 a {
   color: #DA4F49;
@@ -2064,7 +2065,8 @@ table .span24 {
   min-height: 20px;
   padding: 19px;
   margin-bottom: 20px;
-  background-color: #f5f5f5;
+  /* background-color: #f5f5f5; */
+  background-color: white;
   border: 1px solid #eee;
   border: 1px solid rgba(0, 0, 0, 0.05);
   -webkit-border-radius: 4px;
@@ -3718,6 +3720,7 @@ input[type="submit"].btn.btn-mini {
   -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
   -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075);
+  background-color: white;
 }
 a.thumbnail:hover {
   border-color: #0088cc;
@@ -3733,6 +3736,7 @@ a.thumbnail:hover {
 }
 .thumbnail .caption {
   padding: 9px;
+  background-color: white;
 }
 .label {
   padding: 2px 4px;
@@ -4128,7 +4132,7 @@ a.thumbnail:hover {
 .hero-unit {
   padding: 40px;
   margin-bottom: 30px;
-  background-color: #eeeeee;
+  background-color: white;
   -webkit-border-radius: 6px;
   -moz-border-radius: 6px;
   border-radius: 6px;
