--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -179,6 +179,18 @@ a:hover {
     min-height: 600px;
 }
 
+.bg-white {
+    background-color: white;
+    border: 1px solid #eee;
+    border: 1px solid rgba(0, 0, 0, 0.05);
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
 .company-title {
     padding: 10px 0 5px 20px;
     float: left;
@@ -1357,7 +1369,8 @@ table {
   max-width: 100%;
   border-collapse: collapse;
   border-spacing: 0;
-  background-color: transparent;
+/*  background-color: white;
+  border: 1px solid #DDD;*/
 }
 .table {
   width: 100%;
@@ -3314,6 +3327,7 @@ input[type="submit"].btn.btn-mini {
 .pagination {
   height: 36px;
   margin: 18px 0;
+  background-color: white;
 }
 .pagination ul {
   display: inline-block;
