--- a/css/bootstrap-responsive.css
+++ b/css/bootstrap-responsive.css
@@ -502,7 +502,7 @@
   }
   [class*="span"] {
     float: left;
-    margin-left: 30px;
+    /* margin-left: 30px; */
   }
   .container,
   .navbar-fixed-top .container,
